# srdesign

./: GUI.py  LR_and_RL_swipe.py  corners.py  d.py  diagnostic.py  five_gestures.py  gridswipe.py  i2c_scan.py  leftbug.py  mapping.py  pyproject.toml  swipe.py  testing.py  thirteen_gestures.py  tof_testing.py  twelve_gestures.py  two.py  zone.py  zone2.py
